Fix small charts visibility

--- a/my-app/src/styles/_charts.scss
+++ b/my-app/src/styles/_charts.scss
@@ -2,16 +2,17 @@
 
 .flex-charts{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 20px;
+
     
 
     .chart{
         
-        max-width: 200px;
-        height: 130px;
+        max-width: 16%;
+        height: auto;
         border-radius: 20px;
-        margin: 0;
+        margin: 0 20px;
         padding: 0;
         overflow: hidden;
         -webkit-box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.3); 
@@ -27,20 +28,29 @@
             overflow: hidden;
             pointer-events: none;
             
+            
 
             canvas{
-                transform: scale(1.2);
+                transform: scale(1.3);
                 margin-top: 30px;
+                
             }
 
             .chart-data{
+                width: 100%;
+                height: 100%;
+                background: #ffffff7a;
                 position: absolute;
+                padding-top: 20%;
                 top: 50%; right: 50%;
                 transform: translate(50%,-50%);
                 text-align: center;
+                vertical-align: middle;
+                
 
                 h6{
                     font-size: 10px;
+                    
                 }
 
 
