--- a/my-app/src/styles/_right-top-navigation.scss
+++ b/my-app/src/styles/_right-top-navigation.scss
@@ -182,11 +182,11 @@
 
 
 .green{
-    color: rgb(9, 224, 117);
+    color: rgb(77, 253, 165);
 }
 
 .red{
-    color: rgb(255, 0, 0);
+    color: rgb(248, 45, 45);
 }
 
 .hide{
